# dexter-ai-system

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dexter/: __init__.py
dexter/agents/: agents.py  agents_cli_interface.py  agents_executors.py  agents_utils.py  tools.py
dexter/api/: app.py  deps.py
dexter/api/routes/: agents.py  chat.py  sessions.py  system.py  transcribe.py  tts.py
dexter/config/: __init__.py  logging_config.py  settings.py
dexter/core/: __init__.py  llm.py  prompts.py  stt.py  tts.py  voice_distortion.py
dexter/service/: history_manager.py
dexter/utils/: __init__.py  common.py
dexter/web_interface/: streamlit_app.py
dexter/web_interface/components/: agents_component.py  audio_chat.py  context_memory_component.py  realtime_stt_component.py  text_chat.py  video_recorder_component.py  vision_capture.py
scripts/: server.py
tests/: __init__.py
tests/agents/: test_agents_executors.py  test_tools.py
tests/core/: test_llm.py  test_tts.py
tests/service/: test_history_manager.py
tests/utils/: test_common.py
